Change function names and fix ui when report button is also visible

--- a/ui/chat/css/_discussion.scss
+++ b/ui/chat/css/_discussion.scss
@@ -78,12 +78,7 @@
 
     action {
       display: none;
-      position: absolute;
-      top: 5px;
-      @include inline-end(0);
       cursor: pointer;
-      margin-inline-end: 3px;
-      padding: 1px 5px;
       opacity: 0.7;
       color: $c-accent;
 
@@ -112,11 +107,17 @@
   }
 
   a.jump {
-    position: absolute;
-    top: 5px;
     font-size: medium;
-    @include inline-end(5px);
     cursor: pointer;
+  }
+
+  div.actions {
+    position: absolute;
+    @include inline-end(0);
+    display: flex;
+    flex-direction: row;
+    top: 5px;
+    gap: 6px;
     margin-inline-end: 3px;
     padding: 1px 5px;
   }
